# hob

./: .env.sample  .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  client.py  example-hob-config.toml  example-hobknob-config.toml  hob-config.toml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setpath.ps1  setpath.sh  tsconfig.json
.claude/: settings.json
app/: db.py  main.py  models.py
data/: bundles.sql
doc/: hob-specification.md
docs/: hob-architecture-baseline.md  hob-functional-specification.md  hob-unified-agent-authoring-guide.md
hob/: agent_context.py
hob/core/: exceptions.py  interfaces.py  registry.py
hob/executor/: executor.py
hob/memory/: in_memory.py
hob/planner/: dsl.py  planner.py  schemas.py
hob/tools/: __init__.py  compute.py  fetcher.py  parser.py  searcher.py  store.py
images/: Hob-small.xcf
openspec/changes/archive/2026-02-27-initial-hob-ui-without-animations/: proposal.md  tasks.md
openspec/changes/archive/2026-02-28-avatar-sound-reactive-overlay/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-01-azure-openai-connection/: design.md  tasks.md
openspec/changes/avatar-sound-reactive-overlay/: tasks.md
openspec/changes/azure-openai-connection/: proposal.md
openspec/changes/default-general-purpose-agent/: design.md  proposal.md  tasks.md
openspec/changes/initial-hob-ui-without-animations/: design.md  tasks.md
openspec/changes/update-dependencies/: design.md  proposal.md  tasks.md
openspec/specs/agent-avatar-panel/: spec.md
openspec/specs/azure-openai-provider/: spec.md
openspec/specs/debug-mode-ui-toggle/: spec.md
samples/: car_arbitrage.py  repl.py
specs/: SPEC001-Initial-UI-changes.md  SPEC002-Implement-Azure-OpenAI-connect.md  SPEC003-Default-Agent.md
src/app/: App.tsx  auth.py  endpoints.py  layout.tsx  main.py  schemas.py
src/app/agentConfigs/: avatarConfig.ts  guardrails.ts  index.ts
src/app/agentConfigs/defaultAssistant/: index.ts  (+1 more)
src/app/components/: Avatar.tsx  BottomToolbar.tsx
src/app/hooks/: useAvatarAudioLevel.ts  useHandleSessionHistory.ts  useRealtimeSession.ts
src/app/lib/: resolveProvider.ts
src/hob/: auth.py  db.py  exceptions.py  models.py  run_checks.py  services.py
src/hob/ai/: ai.py  template_handler.py
src/hob/config/: __init__.py  mock_provider.py  openai.py  provider_types.py
src/hob/data/: models.py
src/hob/services/: __init__.py  ai.py
src/hobknob/: __init__.py  __main__.py  auth.py  client.py  commands.py  config.py  schemas.py
src/hobknob/commands/: __init__.py  ai.py  auth.py  bundles.py  info.py
src/hobs/: __init__.py  auth.py  endpoints.py  main.py  schemas.py
tests/: hob-test-config.toml  test_ai.py  test_car_arbitrage.py  test_data.py  test_db_models.py  test_schemas.py
(+10 files in other folders)
